--- a/Notebook/Jupyter/path/KasagoDL2.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL2.ipynb
@@ -8,11 +8,11 @@
     "# o'reillyのカサゴ深層学習の本\n",
     "\n",
     "## MINST推論と学習\n",
+    "\n",
+    "## [目次](TableOfContents.ipynb)\n",
     "- [多層パーセプトロン（ニューラルネットワーク](#多層パーセプトロン（ニューラルネットワーク)\n",
     "- [MINST順方向（推論](#MINST順方向（推論)\n",
     "- [MINST逆方向（学習](#MINST逆方向（学習)\n",
-    "\n",
-    "## [目次](TableOfContents.ipynb)\n",
     "\n",
     "## 参考\n",
     "- https://github.com/oreilly-japan/deep-learning-from-scratch/blob/master/notebooks/\n",
@@ -59,6 +59,7 @@
    "source": [
     "### MINSTデータのロード\n",
     "- load_mnist() のプロキシ設定I/Fは環境変数のみ。\n",
+    "- 他環境でエラーになる場合、./kasago/dataset/mnist.pklを削除。\n",
     "- [dataset/mnist.py](Kasago/dataset/mnist.py)"
    ]
   },
