--- a/Notebook/Jupyter/path/NumPyTraining3.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining3.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# NumPyのトレーニング♨\n",
-    "[配列（ベクトル）](NumPyTraining1.ipynb) <--> [行列](NumPyTraining2.ipynb)\n",
+    "[配列（ベクトル）](NumPyTraining1.ipynb) <---> [行列](NumPyTraining2.ipynb)\n",
+    "\n",
+    "## [目次](TableOfContents.ipynb)\n",
     "- [準備](#準備)\n",
     "- [型の変換](#型の変換)\n",
     "  - [要素の型の変換](#要素の型の変換)\n",
@@ -27,8 +29,7 @@
     "- [One-Hotエンコーディング](#One-Hotエンコーディング)\n",
     "  - [エンコーディング](#エンコーディング)\n",
     "  - [デコーディング](#デコーディング)\n",
-    "  \n",
-    "## [目次](TableOfContents.ipynb)\n",
+    " \n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
