--- a/Notebook/Jupyter/path/PandasTraining.ipynb
+++ b/Notebook/Jupyter/path/PandasTraining.ipynb
@@ -8,7 +8,22 @@
     "# Pandasのトレーニング♨\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
-    "\n",
+    "- [準備](#準備)\n",
+    "  - [インストール](#インストール)\n",
+    "  - [インポート](#インポート)\n",
+    "- [Series](#Series)\n",
+    "  - [生成](#生成)\n",
+    "  - [アクセス](#アクセス)\n",
+    "- [DataFrame](#DataFrame)\n",
+    "  - [生成](#生成)\n",
+    "  - [アクセス](#アクセス)\n",
+    "  - [編集](#編集)\n",
+    "  - [型変換](#型変換)\n",
+    "  - [集計操作](#集計操作)\n",
+    "- [CRISP-DM](#CRISP-DM)\n",
+    "  - [データの理解](#データの理解)\n",
+    "  - [データの準備](#データの準備)\n",
+    "  \n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
     "- Pandas  \n",
@@ -51,7 +66,9 @@
   {
    "cell_type": "markdown",
    "id": "3a4c204c-a98d-4e6e-9501-b2af8a808d13",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### インポート"
    ]
@@ -536,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.read_excel('temp.xlsx')\n",
+    "# df = pd.read_excel('temp.xlsx', engine='openpyxl')\n",
     "# df"
    ]
   },
@@ -580,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(io.BytesIO(res.content))\n",
+    "df = pd.read_excel(io.BytesIO(res.content), engine='openpyxl')\n",
     "df"
    ]
   },
@@ -600,7 +617,7 @@
    "outputs": [],
    "source": [
     "with open('temp.xlsx', 'wb') as saveFile : saveFile.write(res.content)\n",
-    "df = pd.read_excel('temp.xlsx')\n",
+    "df = pd.read_excel('temp.xlsx', engine='openpyxl')\n",
     "df"
    ]
   },
