--- a/Notebook/Jupyter/path/PythonTraining.ipynb
+++ b/Notebook/Jupyter/path/PythonTraining.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "# Pythonのトレーニング♨\n",
     "\n",
+    "## [目次](TableOfContents.ipynb)\n",
     "- [概要](#概要)\n",
     "  - [コマンド実行](#コマンド実行)\n",
     "  - [インタラクティブ実行](#インタラクティブ実行)\n",
@@ -16,8 +17,6 @@
     "  - [関数・クラス](#関数・クラス)\n",
     "  - [その他](#その他)\n",
     "  \n",
-    "## [目次](TableOfContents.ipynb)\n",
-    "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
     "- Pythonファースト・ステップ  \n",
@@ -63,6 +62,24 @@
    },
    "source": [
     "### コマンド実行"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56b4d2c1-93c3-41c1-8a99-c674f012693a",
+   "metadata": {},
+   "source": [
+    "#### 環境変数の確認"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1b77671-cfc3-48b1-8727-16ea76f6a63c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env"
    ]
   },
   {
@@ -165,21 +182,252 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b4c8f66-1771-45ea-bfc2-6e0ac626fe62",
+   "metadata": {},
+   "source": [
+    "#### パッケージ・バージョンの確認"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "bac6e370-ecb2-4d10-a9a2-f918469a87cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                       Version\n",
+      "----------------------------- -----------\n",
+      "absl-py                       1.3.0\n",
+      "alembic                       1.8.0\n",
+      "altair                        4.2.0\n",
+      "anyio                         3.6.1\n",
+      "argon2-cffi                   21.3.0\n",
+      "argon2-cffi-bindings          21.2.0\n",
+      "asttokens                     2.0.5\n",
+      "astunparse                    1.6.3\n",
+      "async-generator               1.10\n",
+      "attrs                         21.4.0\n",
+      "Babel                         2.10.1\n",
+      "backcall                      0.2.0\n",
+      "backports.functools-lru-cache 1.6.4\n",
+      "beautifulsoup4                4.11.1\n",
+      "bleach                        5.0.0\n",
+      "blinker                       1.4\n",
+      "bokeh                         2.4.3\n",
+      "Bottleneck                    1.3.4\n",
+      "brotlipy                      0.7.0\n",
+      "cached-property               1.5.2\n",
+      "cachetools                    5.2.0\n",
+      "certifi                       2022.5.18.1\n",
+      "certipy                       0.1.3\n",
+      "cffi                          1.15.0\n",
+      "charset-normalizer            2.0.12\n",
+      "click                         8.1.3\n",
+      "cloudpickle                   2.1.0\n",
+      "colorama                      0.4.4\n",
+      "conda                         4.12.0\n",
+      "conda-package-handling        1.8.1\n",
+      "cryptography                  37.0.2\n",
+      "cycler                        0.11.0\n",
+      "Cython                        0.29.30\n",
+      "cytoolz                       0.11.2\n",
+      "dask                          2022.5.2\n",
+      "debugpy                       1.6.0\n",
+      "decorator                     5.1.1\n",
+      "defusedxml                    0.7.1\n",
+      "dill                          0.3.5.1\n",
+      "distributed                   2022.5.2\n",
+      "entrypoints                   0.4\n",
+      "et-xmlfile                    1.1.0\n",
+      "executing                     0.8.3\n",
+      "fastjsonschema                2.15.3\n",
+      "flatbuffers                   22.11.23\n",
+      "flit_core                     3.7.1\n",
+      "fonttools                     4.33.3\n",
+      "fsspec                        2022.5.0\n",
+      "gast                          0.4.0\n",
+      "gmpy2                         2.1.2\n",
+      "google-auth                   2.14.1\n",
+      "google-auth-oauthlib          0.4.6\n",
+      "google-pasta                  0.2.0\n",
+      "greenlet                      1.1.2\n",
+      "grpcio                        1.51.1\n",
+      "h5py                          3.6.0\n",
+      "HeapDict                      1.0.1\n",
+      "idna                          3.3\n",
+      "imagecodecs                   2022.2.22\n",
+      "imageio                       2.19.3\n",
+      "importlib-metadata            4.11.4\n",
+      "importlib-resources           5.7.1\n",
+      "ipykernel                     6.13.0\n",
+      "ipympl                        0.9.1\n",
+      "ipython                       8.4.0\n",
+      "ipython-genutils              0.2.0\n",
+      "ipywidgets                    7.7.0\n",
+      "jedi                          0.18.1\n",
+      "Jinja2                        3.1.2\n",
+      "joblib                        1.1.0\n",
+      "json5                         0.9.5\n",
+      "jsonschema                    4.6.0\n",
+      "jupyter-client                7.3.1\n",
+      "jupyter-core                  4.10.0\n",
+      "jupyter-server                1.17.0\n",
+      "jupyter-telemetry             0.1.0\n",
+      "jupyterhub                    2.3.0\n",
+      "jupyterlab                    3.4.2\n",
+      "jupyterlab-pygments           0.2.2\n",
+      "jupyterlab-server             2.14.0\n",
+      "jupyterlab-widgets            1.1.0\n",
+      "keras                         2.11.0\n",
+      "kiwisolver                    1.4.2\n",
+      "libclang                      14.0.6\n",
+      "libmambapy                    0.24.0\n",
+      "llvmlite                      0.38.1\n",
+      "locket                        1.0.0\n",
+      "lz4                           4.0.0\n",
+      "Mako                          1.2.0\n",
+      "mamba                         0.24.0\n",
+      "Markdown                      3.4.1\n",
+      "MarkupSafe                    2.1.1\n",
+      "matplotlib                    3.5.2\n",
+      "matplotlib-inline             0.1.3\n",
+      "mglearn                       0.1.9\n",
+      "mistune                       0.8.4\n",
+      "mlxtend                       0.21.0\n",
+      "mpmath                        1.2.1\n",
+      "msgpack                       1.0.4\n",
+      "munkres                       1.1.4\n",
+      "nbclassic                     0.3.7\n",
+      "nbclient                      0.6.4\n",
+      "nbconvert                     6.5.0\n",
+      "nbformat                      5.4.0\n",
+      "nest-asyncio                  1.5.5\n",
+      "networkx                      2.8.3\n",
+      "notebook                      6.4.11\n",
+      "notebook-shim                 0.1.0\n",
+      "numba                         0.55.1\n",
+      "numexpr                       2.8.0\n",
+      "numpy                         1.21.6\n",
+      "oauthlib                      3.2.0\n",
+      "opencv-python                 4.6.0.66\n",
+      "openpyxl                      3.0.10\n",
+      "opt-einsum                    3.3.0\n",
+      "packaging                     21.3\n",
+      "pamela                        1.0.0\n",
+      "pandas                        1.4.2\n",
+      "pandocfilters                 1.5.0\n",
+      "parso                         0.8.3\n",
+      "partd                         1.2.0\n",
+      "patsy                         0.5.2\n",
+      "pexpect                       4.8.0\n",
+      "pickleshare                   0.7.5\n",
+      "Pillow                        9.1.1\n",
+      "pip                           22.3.1\n",
+      "pipdeptree                    2.3.3\n",
+      "prometheus-client             0.14.1\n",
+      "prompt-toolkit                3.0.29\n",
+      "protobuf                      3.19.6\n",
+      "psutil                        5.9.1\n",
+      "ptyprocess                    0.7.0\n",
+      "pure-eval                     0.2.2\n",
+      "pyarrow                       8.0.0\n",
+      "pyasn1                        0.4.8\n",
+      "pyasn1-modules                0.2.8\n",
+      "pycosat                       0.6.3\n",
+      "pycparser                     2.21\n",
+      "pycurl                        7.45.1\n",
+      "Pygments                      2.12.0\n",
+      "PyJWT                         2.4.0\n",
+      "pyOpenSSL                     22.0.0\n",
+      "pyparsing                     3.0.9\n",
+      "pyrsistent                    0.18.1\n",
+      "PySocks                       1.7.1\n",
+      "pyspark                       3.2.1\n",
+      "python-dateutil               2.8.2\n",
+      "python-json-logger            2.0.1\n",
+      "pytz                          2022.1\n",
+      "PyWavelets                    1.3.0\n",
+      "PyYAML                        6.0\n",
+      "pyzmq                         23.1.0\n",
+      "requests                      2.27.1\n",
+      "requests-oauthlib             1.3.1\n",
+      "rsa                           4.9\n",
+      "ruamel.yaml                   0.17.21\n",
+      "ruamel.yaml.clib              0.2.6\n",
+      "ruamel-yaml-conda             0.15.80\n",
+      "scikit-image                  0.19.2\n",
+      "scikit-learn                  1.1.1\n",
+      "scipy                         1.8.1\n",
+      "seaborn                       0.11.2\n",
+      "Send2Trash                    1.8.0\n",
+      "setuptools                    62.3.2\n",
+      "six                           1.16.0\n",
+      "sniffio                       1.2.0\n",
+      "sortedcontainers              2.4.0\n",
+      "soupsieve                     2.3.1\n",
+      "SQLAlchemy                    1.4.37\n",
+      "stack-data                    0.2.0\n",
+      "statsmodels                   0.13.2\n",
+      "sympy                         1.10.1\n",
+      "tables                        3.7.0\n",
+      "tblib                         1.7.0\n",
+      "tensorboard                   2.11.0\n",
+      "tensorboard-data-server       0.6.1\n",
+      "tensorboard-plugin-wit        1.8.1\n",
+      "tensorflow                    2.11.0\n",
+      "tensorflow-estimator          2.11.0\n",
+      "tensorflow-io-gcs-filesystem  0.28.0\n",
+      "termcolor                     2.1.1\n",
+      "terminado                     0.15.0\n",
+      "threadpoolctl                 3.1.0\n",
+      "tifffile                      2022.5.4\n",
+      "tinycss2                      1.1.1\n",
+      "toolz                         0.11.2\n",
+      "tornado                       6.1\n",
+      "tqdm                          4.64.0\n",
+      "traitlets                     5.2.2.post1\n",
+      "typing_extensions             4.2.0\n",
+      "unicodedata2                  14.0.0\n",
+      "urllib3                       1.26.9\n",
+      "wcwidth                       0.2.5\n",
+      "webencodings                  0.5.1\n",
+      "websocket-client              1.3.2\n",
+      "Werkzeug                      2.2.2\n",
+      "wheel                         0.37.1\n",
+      "widgetsnbextension            3.6.0\n",
+      "wrapt                         1.14.1\n",
+      "xlrd                          2.0.1\n",
+      "zict                          2.2.0\n",
+      "zipp                          3.8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc450d58-4598-46bb-987e-2e1ea0bc835a",
    "metadata": {
     "tags": []
    },
    "source": [
-    "#### パッケージの利用\n",
-    "依存関係の確認"
+    "#### パッケージの利用"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "88df3da7-d13c-4785-879a-b328d9249a92",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "###### pipdeptree"
+    "###### pipdeptree\n",
+    "依存関係の確認"
    ]
   },
   {
@@ -1635,7 +1883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
