--- a/Notebook/Jupyter/path/ScikitLearnTraining1.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining1.ipynb
@@ -8,10 +8,14 @@
     "# scikit-learnのトレーニング♨\n",
     "\n",
     "## 単回帰、重回帰分析 編\n",
-    "- [単回帰分析](#単回帰分析)\n",
-    "- [重回帰分析](#重回帰分析)\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
+    "- [環境準備](#環境準備)\n",
+    "  - [インポート](#インポート)\n",
+    "  - [共通関数定義](#共通関数定義)\n",
+    "- [モデル・アルゴリズム](#モデル・アルゴリズム)\n",
+    "  - [単回帰分析](#単回帰分析)\n",
+    "  - [重回帰分析](#重回帰分析)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -30,6 +34,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31317533-d20c-46ff-8844-432dd350c658",
+   "metadata": {},
+   "source": [
+    "### インポート"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "eb1f5b0a-0c33-42d1-be04-fa5f627c60c1",
@@ -41,7 +53,6 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import mglearn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn import datasets                                 # サンプル・データセット\n",
@@ -96,8 +107,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72a6b5a0-5961-466c-9df1-c5f2bf15baac",
+   "id": "005888b0-d9f8-4a07-b310-69037b6bb14f",
    "metadata": {},
+   "source": [
+    "### 共通関数定義"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "444163f6-4d53-42b4-80b7-964d01a019f8",
+   "metadata": {},
+   "source": [
+    "#### 残差プロットを行う関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a905379a-7afd-472b-acc5-ca1c4bdbfac8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def res_plot(y_train, y_train_pred, y_test, y_test_pred):\n",
+    "    # train, testごとに残差を算出\n",
+    "    res_train = y_train_pred - y_train\n",
+    "    res_test  = y_test_pred - y_test\n",
+    "    \n",
+    "    # train, testごとに(予測値, 残差)をプロット\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    plt.scatter(y_train_pred, res_train, color='blue', marker='o', label='train', alpha=0.5)\n",
+    "    plt.scatter(y_test_pred, res_test, color='green', marker='s', label='test', alpha=0.5)\n",
+    "    \n",
+    "    plt.xlabel('Predicted Values')                  # x軸のラベルを表示\n",
+    "    plt.ylabel('Residuals')                         # y軸のラベルを表示\n",
+    "    plt.legend(loc='upper left')                    # 凡例を左上に表示\n",
+    "    plt.hlines(y=0, xmin=-10, xmax=50, color='red') # 残差0の線を表示\n",
+    "    plt.xlim([-10, 50])                             # 表示する横軸の範囲を指定\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72a6b5a0-5961-466c-9df1-c5f2bf15baac",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## モデル・アルゴリズム"
    ]
@@ -146,7 +200,7 @@
     "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=n_ice%2Bvs%2Btemp.xlsx&refer=FrontPage'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
-    "df = pd.read_excel(io.BytesIO(res.content))\n",
+    "df = pd.read_excel(io.BytesIO(res.content), engine='openpyxl')\n",
     "df"
    ]
   },
@@ -177,14 +231,6 @@
    },
    "source": [
     "##### 理解"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "435d5024-a35a-4fc2-809f-28b4645337ff",
-   "metadata": {},
-   "source": [
-    "###### [共通](#データ理解)"
    ]
   },
   {
@@ -236,14 +282,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afb5f578-1f54-4b3d-8f2a-ade05bc44b77",
-   "metadata": {},
-   "source": [
-    "###### 個別"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bcd546e1-1ec3-4872-8e91-07ac4d85bd5e",
    "metadata": {
     "tags": []
@@ -259,20 +297,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# データを切出して、型を変換（DF → NP）\n",
+    "# 説明変数・目的変数の選択・分割\n",
     "x = np.array(df.loc[:, ['MAX_TEMP']])\n",
     "y = np.array(df.loc[:, ['N_ICE']])\n",
     "# データをスライシングして確認。\n",
     "print(x[:5])\n",
     "print(y[:5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4512f61b-63b5-4433-9562-73c6637a0598",
-   "metadata": {},
-   "source": [
-    "###### 共通"
    ]
   },
   {
@@ -284,15 +314,6 @@
    "source": [
     "# 学習・テストデータの分割（ホールド・アウト法\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, random_state = 0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0a00abf0-c4af-4907-981a-309481d91fb8",
-   "metadata": {},
-   "source": [
-    "###### 個別\n",
-    "なし"
    ]
   },
   {
@@ -464,7 +485,15 @@
     "tags": []
    },
    "source": [
-    "##### 生成\n",
+    "##### 生成"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf1fa42d-55d5-41aa-8368-9a1b1b4ba026",
+   "metadata": {},
+   "source": [
+    "###### ダウンロードしてDFに読込\n",
     "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
    ]
   },
@@ -476,14 +505,16 @@
    "outputs": [],
    "source": [
     "# Function load_boston is deprecated; `load_boston` is deprecated in 1.0 and will be removed in 1.2.\n",
+    "'''\n",
     "## bostonデータを格納したクラス\n",
-    "#from sklearn.datasets import load_boston\n",
+    "from sklearn.datasets import load_boston\n",
     "## インスタンスを生成\n",
-    "#boston = load_boston()\n",
+    "boston = load_boston()\n",
     "## データの詳細を出力\n",
-    "#print(boston.DESCR)\n",
-    "#df = pd.DataFrame(boston.data, columns=boston.feature_names)\n",
-    "#df"
+    "print(boston.DESCR)\n",
+    "df = pd.DataFrame(boston.data, columns=boston.feature_names)\n",
+    "df\n",
+    "'''"
    ]
   },
   {
@@ -561,14 +592,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "29479236-0734-40b6-9175-9518436f2502",
-   "metadata": {},
-   "source": [
-    "###### [共通](#データ理解)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "de6f6f78-0e5c-4476-97f2-01686fc2839d",
@@ -617,14 +640,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3425f38-5e54-4ff9-a821-2847cbef42f4",
-   "metadata": {},
-   "source": [
-    "###### 個別"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ef2b4f11-c6f6-4a2b-ba8a-9b995185bec4",
    "metadata": {},
    "source": [
@@ -638,21 +653,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# データを切出して、型を変換（DF → NP）\n",
+    "# 説明変数・目的変数の選択・分割\n",
     "# x = np.array(df.drop(['medv'], axis=1))\n",
     "x = np.array(df.drop(['indus', 'dis', 'medv'], axis=1))\n",
     "y = np.array(df.loc[:, ['medv']])\n",
     "# データをスライシングして確認。\n",
     "print(x[:5])\n",
     "print(y[:5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8b31bbf-2e6c-4c3f-ab1f-1c81364ad9b8",
-   "metadata": {},
-   "source": [
-    "###### 共通"
    ]
   },
   {
@@ -663,19 +670,19 @@
    "outputs": [],
    "source": [
     "# 偏回帰係数を見て、追加の特徴量エンジニアリングを行う場合\n",
-    "# ss = StandardScaler()\n",
+    "# 説明変数に標準化を施す必要がある。\n",
+    "'''\n",
+    "ss = StandardScaler()\n",
     "\n",
     "# 引数は numpy.ndarray\n",
-    "# x = ss.fit_transform(x)\n",
-    "# y = ss.fit_transform(y)\n",
+    "x = ss.fit_transform(x)\n",
     "\n",
     "# 確認\n",
     "## 平均が ≒ 0\n",
-    "# print(\"x.mean(): \", x.mean())\n",
-    "# print(\"y.mean(): \", y.mean())\n",
+    "print(\"x.mean(): \", x.mean())\n",
     "## 標準偏差が ≒ 1\n",
-    "# print(\"x.std(): \", x.std())\n",
-    "# print(\"y.std(): \", y.std())"
+    "print(\"x.std(): \", x.std())\n",
+    "'''"
    ]
   },
   {
@@ -687,14 +694,6 @@
    "source": [
     "# 学習・テストデータの分割（ホールド・アウト法\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, random_state = 0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e79ecdd9-6284-4fb9-900f-d70318af272f",
-   "metadata": {},
-   "source": [
-    "###### 個別"
    ]
   },
   {
@@ -908,7 +907,8 @@
    "metadata": {},
    "source": [
     "###### 残差プロットを行う。\n",
-    "説明変数が３変数以上でも適用できる。"
+    "- 説明変数が３変数以上でも適用できる。\n",
+    "- 参考：https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#i3d85f2b"
    ]
   },
   {
@@ -918,23 +918,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def res_plot(y_train, y_train_pred, y_test, y_test_pred):\n",
-    "    # train, testごとに残差を算出\n",
-    "    res_train = y_train_pred - y_train\n",
-    "    res_test  = y_test_pred - y_test\n",
-    "    \n",
-    "    # train, testごとに(予測値, 残差)をプロット\n",
-    "    plt.figure(figsize=(8, 8))\n",
-    "    plt.scatter(y_train_pred, res_train, color='blue', marker='o', label='train', alpha=0.5)\n",
-    "    plt.scatter(y_test_pred, res_test, color='green', marker='s', label='test', alpha=0.5)\n",
-    "    \n",
-    "    plt.xlabel('Predicted Values')                  # x軸のラベルを表示\n",
-    "    plt.ylabel('Residuals')                         # y軸のラベルを表示\n",
-    "    plt.legend(loc='upper left')                    # 凡例を左上に表示\n",
-    "    plt.hlines(y=0, xmin=-10, xmax=50, color='red') # 残差0の線を表示\n",
-    "    plt.xlim([-10, 50])                             # 表示する横軸の範囲を指定\n",
-    "    plt.show()\n",
-    "\n",
     "# 残差プロットを出力\n",
     "res_plot(y_train, lr.predict(x_train), y_test, lr.predict(x_test))"
    ]
