--- a/Notebook/Jupyter/path/ScikitLearnTraining3.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining3.ipynb
@@ -3,17 +3,25 @@
   {
    "cell_type": "markdown",
    "id": "cf8af0d7-c198-4acd-921a-f3683f675ced",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# scikit-learnのトレーニング♨\n",
     "\n",
     "## 様々な分類器（PPN、SVM、DTL、LRA） 編\n",
-    "- PPN: [パーセプトロン](#単純パーセプトロン線形分類器)\n",
-    "- SVM: [サポートベクターマシン](#サポートベクターマシン分類器)\n",
-    "- DTL: [決定木（分類木）](#決定木分析)\n",
-    "- LRA: [ロジスティクス回帰](#ロジスティック回帰)\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
+    "- [環境準備](#環境準備)\n",
+    "- [共通的データ処理](#共通的データ処理)\n",
+    "- [モデル・アルゴリズム](#モデル・アルゴリズム)\n",
+    "  - PPN: [パーセプトロン](#単純パーセプトロン線形分類器)\n",
+    "  - SVM: [サポートベクターマシン](#サポートベクターマシン分類器)\n",
+    "  - DTL: [決定木（分類木）](#決定木分析)\n",
+    "  - LRA: [ロジスティクス回帰](#ロジスティック回帰)\n",
+    "- その他\n",
+    "  - [各特徴量の重要度を出力](#各特徴量の重要度を出力)\n",
+    "  - [分類問題の性能の評価](#分類問題の性能の評価)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -43,7 +51,6 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import mglearn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn import datasets                                 # サンプル・データセット\n",
@@ -203,7 +210,7 @@
    "id": "8ebc5736-a522-4c9f-a25c-0c609b923a6d",
    "metadata": {},
    "source": [
-    "#### 選択"
+    "#### 説明変数・目的変数の選択・分割"
    ]
   },
   {
@@ -232,7 +239,7 @@
    "id": "639ff9a3-e02e-473a-a0de-6c2449c7fc4d",
    "metadata": {},
    "source": [
-    "#### データの標準化\n",
+    "#### 標準化\n",
     "カテゴリ・データは対象外"
    ]
   },
@@ -358,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = 10\n",
+    "index = 15\n",
     "print('answer : %d' % y_test[index][0])\n",
     "print('predict: %d' % ppn.predict([x_test[index]])[0])"
    ]
@@ -1238,7 +1245,7 @@
    "metadata": {},
    "source": [
     "##### 各特徴量の重要度を出力\n",
-    "[ロジスティクス回帰](#ロジスティック回帰)のデータを使用するなどして。"
+    "[ロジスティクス回帰](#ロジスティック回帰)のデータを使用するなどして（後述）。"
    ]
   },
   {
@@ -1398,8 +1405,8 @@
    "id": "b7555c3f-1cf0-4eee-b704-0408529efcb4",
    "metadata": {},
    "source": [
-    "###### データの標準化\n",
-    "（カテゴリ・データは対象外"
+    "###### 標準化\n",
+    "カテゴリ・データは対象外"
    ]
   },
   {
@@ -1558,61 +1565,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5fbea53-e65f-48e6-89bb-48c4d348a231",
+   "id": "540d02fa-1aea-437c-86e1-25c85e0d3de5",
    "metadata": {},
    "source": [
-    "##### メトリック表示"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8bcd3b33-3e33-4da5-b41c-dcbd50ea7161",
-   "metadata": {},
-   "source": [
-    "###### 関数定義"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "149f2347-0614-4b4e-8ebc-4ed624cc1d47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_metrics(model, data, label):\n",
-    "    from sklearn import metrics\n",
-    "    pred = model.predict(data)\n",
-    "    print('accuracy: %.3f' % metrics.accuracy_score(label, pred)) # 正答率\n",
-    "    print('recall: %.3f' % metrics.recall_score(label, pred, average='macro')) # 再現率（マクロ平均）\n",
-    "    print('precision: %.3f' % metrics.precision_score(label, pred, average='macro')) # 適合率（マクロ平均）\n",
-    "    print('f1_score: %.3f' % metrics.f1_score(label, pred, average='macro')) # f値（マクロ平均）"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee951893-e37b-43ef-afd6-db9cc31ac152",
-   "metadata": {},
-   "source": [
-    "###### 指標確認"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd51fb8e-36f6-4afd-92e2-76e0e4846a82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_metrics(lr, x_train, y_train)\n",
-    "print_metrics(lr, x_test, y_test)"
+    "## その他"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "c5e7fcb1-2e73-4aa7-ad44-52f03d42fc7b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "#### 各特徴量の重要度を出力"
+    "### 各特徴量の重要度を出力\n",
+    "これは、RandomForestClassifierの機能"
    ]
   },
   {
@@ -1627,7 +1594,7 @@
     "x = df_pickup_x.values\n",
     "y = df_pickup_y.values\n",
     "tree_rfc = RandomForestClassifier(random_state=0, n_estimators=100)\n",
-    "tree.fit(x, y)"
+    "tree_rfc.fit(x, y)"
    ]
   },
   {
@@ -1635,7 +1602,7 @@
    "id": "daa0a2a3-7812-4d48-8871-e7ef2aac2826",
    "metadata": {},
    "source": [
-    "##### 配列で表示"
+    "#### 配列で表示"
    ]
   },
   {
@@ -1655,7 +1622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(tree.feature_importances_)"
+    "print(tree_rfc.feature_importances_)"
    ]
   },
   {
@@ -1663,7 +1630,7 @@
    "id": "6d100828-58f1-454e-aace-5ed575a63fea",
    "metadata": {},
    "source": [
-    "##### 可視化（棒グラフ）"
+    "#### 可視化（棒グラフ）"
    ]
   },
   {
@@ -1675,9 +1642,19 @@
    "source": [
     "x_columns = len(df_pickup_x.columns)\n",
     "plt.figure(figsize=(12, 8))\n",
-    "plt.barh(range(x_columns), tree.feature_importances_ , align='center')\n",
+    "plt.barh(range(x_columns), tree_rfc.feature_importances_ , align='center')\n",
     "plt.yticks(np.arange(x_columns), df_pickup_x.columns)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "890b1b8f-5b74-4145-96ce-a9f3830a7afa",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### [分類問題の性能の評価](ScikitLearnTraining5.ipynb)"
    ]
   }
  ],
