--- a/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
@@ -8,11 +8,16 @@
     "# scikit-learnのトレーニング♨\n",
     "\n",
     "## 性能の評価、チューニング 編\n",
-    "- [分類問題の性能の評価](#分類問題の性能の評価)\n",
-    "- [汎化性能の評価](#汎化性能の評価)\n",
-    "- [チューニング](#チューニング)\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
+    "- [環境準備](#環境準備)\n",
+    "  - [インポート](#インポート)\n",
+    "  - [共通関数定義](#共通関数定義)\n",
+    "- [性能の評価](#性能の評価)\n",
+    "  - [回帰問題の性能の評価](#回帰問題の性能の評価)\n",
+    "  - [分類問題の性能の評価](#分類問題の性能の評価)\n",
+    "- [汎化性能の評価](#汎化性能の評価)\n",
+    "- [チューニング](#チューニング)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -31,6 +36,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b02ea6f3-4374-41a6-8146-0f6bd5b49679",
+   "metadata": {},
+   "source": [
+    "### インポート"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "06435506-b010-44b9-8fc6-472e61ed518c",
@@ -42,7 +55,6 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import mglearn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn import datasets                                 # サンプル・データセット\n",
@@ -97,8 +109,128 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57122142-2f42-4086-acb2-446388d068fa",
+   "id": "9a36efe2-8eef-43fa-b9eb-be23c2e5680f",
    "metadata": {},
+   "source": [
+    "### 共通関数定義"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae4229d-0e7c-4962-9b97-ca38de613aae",
+   "metadata": {},
+   "source": [
+    "#### [分類問題のメトリック](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972)表示関数\n",
+    "\n",
+    "##### ミクロ平均\n",
+    "- クラスごとのサンプル数の偏りを調整しない場合の平均の取り方\n",
+    "- 多数派のクラスを重視したいときはミクロ平均を使う。\n",
+    "\n",
+    "##### マクロ平均\n",
+    "- サンプル数の偏りを調整する場合の平均の取り方\n",
+    "- 全体を均等に評価したいときはマクロ平均を使う。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "896e341a-a104-42ea-b03f-3eb61a30c818",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_metrics(label, pred):\n",
+    "    print('accuracy: %.3f' % metrics.accuracy_score(label, pred)) # 正答率\n",
+    "    \n",
+    "    print('\\nmicro') # ミクロ平均\n",
+    "    print('recall: %.3f' % metrics.recall_score(label, pred, average='micro')) # 再現率\n",
+    "    print('precision: %.3f' % metrics.precision_score(label, pred, average='micro')) # 適合率\n",
+    "    print('f1_score: %.3f' % metrics.f1_score(label, pred, average='micro')) # f値\n",
+    "    \n",
+    "    print('\\nmacro') # マクロ平均\n",
+    "    print('recall: %.3f' % metrics.recall_score(label, pred, average='macro')) # 再現率\n",
+    "    print('precision: %.3f' % metrics.precision_score(label, pred, average='macro')) # 適合率\n",
+    "    print('f1_score: %.3f' % metrics.f1_score(label, pred, average='macro')) # f値"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bef113f-8873-46ca-8be4-0d709508c297",
+   "metadata": {},
+   "source": [
+    "#### 混同行列のグラフ化関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbba7e41-e44e-4283-94c7-62732f5f3f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_cm(confmat, label):\n",
+    "    numOfCls = len(label)\n",
+    "    fig, ax = plt.subplots(figsize=(numOfCls, numOfCls))\n",
+    "    ax.matshow(confmat, cmap=plt.cm.Blues, alpha=0.3)\n",
+    "    for i in range(confmat.shape[0]):\n",
+    "        for j in range(confmat.shape[1]):\n",
+    "            ax.text(x=j, y=i, s=confmat[i, j], va='center', ha='center')\n",
+    "            \n",
+    "    # 軸目盛を打つ場所を決める\n",
+    "    ax.set_xticks(np.arange(len(label)))\n",
+    "    ax.set_yticks(np.arange(len(label)))\n",
+    "    # 軸目盛を設定\n",
+    "    ax.set_xticklabels(label)\n",
+    "    ax.set_yticklabels(label)\n",
+    "    #plt.xticks(np.array(label)) # x軸の目盛りを指定\n",
+    "    #plt.yticks(np.array(label)) # y軸の目盛りを指定\n",
+    "    \n",
+    "    plt.xlabel('y_pred label')\n",
+    "    plt.ylabel('y label')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18ba11e7-c419-4110-ac3d-6344b10ecdb4",
+   "metadata": {},
+   "source": [
+    "## 性能の評価\n",
+    "https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d40645d-a7a4-4ef7-a73f-18487a1877d6",
+   "metadata": {},
+   "source": [
+    "## 回帰問題の性能の評価"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b48055a-0d40-4e34-8959-3ba3204e82b2",
+   "metadata": {},
+   "source": [
+    "### 誤差による評価指標＆関数\n",
+    "- 平均二乗誤差（MSE：Mean Squared Error）, 誤差の標準偏差（RMSE : Root Mean Squared Error）\n",
+    "- 参考：[単回帰、重回帰分析](ScikitLearnTraining1.ipynb), [多項式回帰、正則化回帰分析](ScikitLearnTraining2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e3920f4-af83-4558-b144-d99677196ca5",
+   "metadata": {},
+   "source": [
+    "### 残差プロット\n",
+    "参考：[単回帰、重回帰分析](ScikitLearnTraining1.ipynb), [多項式回帰、正則化回帰分析](ScikitLearnTraining2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57122142-2f42-4086-acb2-446388d068fa",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## 分類問題の性能の評価\n",
     "[分類問題のデータとアルゴリズム](ScikitLearnTraining3.ipynb)を使用。"
@@ -126,7 +258,7 @@
     "\n",
     "np_arr=np.array(df)\n",
     "\n",
-    "# データの標準化\n",
+    "# 標準化\n",
     "ss = StandardScaler()"
    ]
   },
@@ -145,12 +277,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PetalLengthCm, PetalWidthCm列の選択\n",
+    "# 説明変数・目的変数の選択・分割\n",
+    "## PetalLengthCm, PetalWidthCm列の選択\n",
     "x2=np_arr[50:150, 2:4] \n",
-    "\n",
-    "# Species列の選択\n",
+    "## Species列の選択\n",
     "y2=np.array(np_arr[50:150, 4:5],dtype=np.int64) # 要素の型をint64に変換\n",
     "\n",
+    "# 標準化\n",
     "ss.fit(x2)\n",
     "x2_std = ss.transform(x2)\n",
     "\n",
@@ -175,10 +308,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 説明変数・目的変数の選択・分割\n",
+    "## PetalLengthCm, PetalWidthCm列の選択\n",
     "x3=np_arr[:, 2:4] \n",
+    "## Species列の選択\n",
     "y3=np.array(np_arr[:, 4:5],dtype=np.int64) # 要素の型をint64に変換\n",
+    "\n",
+    "# 標準化\n",
     "ss.fit(x3)\n",
     "x3_std = ss.transform(x3)\n",
+    "\n",
+    "# 学習・テストデータの分割\n",
     "x3_train, x3_test, y3_train, y3_test = train_test_split(x3_std, y3, test_size=0.3, random_state=0)\n",
     "\n",
     "print(x3.shape)"
@@ -382,8 +522,7 @@
    "outputs": [],
    "source": [
     "cm_ppn2 = confusion_matrix(y2_test, ppn2.predict(x2_test))\n",
-    "print(cm_ppn2.dtype)\n",
-    "print(cm_ppn2)"
+    "plot_cm(cm_ppn2, np.unique(y2_test))"
    ]
   },
   {
@@ -402,8 +541,7 @@
    "outputs": [],
    "source": [
     "cm_svc2 = confusion_matrix(y2_test, svc2.predict(x2_test))\n",
-    "print(cm_svc2.dtype)\n",
-    "print(cm_svc2)"
+    "plot_cm(cm_svc2, np.unique(y2_test))"
    ]
   },
   {
@@ -422,8 +560,7 @@
    "outputs": [],
    "source": [
     "cm_tree2 = confusion_matrix(y2_test, tree_gbc2.predict(x2_test))\n",
-    "print(cm_tree2.dtype)\n",
-    "print(cm_tree2)"
+    "plot_cm(cm_tree2, np.unique(y2_test))"
    ]
   },
   {
@@ -438,64 +575,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1f6f970-8aa0-453e-a243-846e3cda3f9e",
+   "id": "9554ada6-dd07-4f94-b44f-51e90fff8be1",
    "metadata": {},
    "source": [
-    "###### accuracy（正解率）"
+    "###### 単純パーセプトロン線形分類器"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d077f79-97f9-4d84-90b3-dee1d77c23ec",
+   "id": "e6a0fea8-ea90-495b-9505-4d3410bc91d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"accuracy_score: \", metrics.accuracy_score(y2_test, svc2.predict(x2_test)))"
+    "print_metrics(y2_test, ppn2.predict(x2_test))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "176c3184-b8bc-4397-8da7-6ce79cc218cd",
+   "id": "55cbcfcd-1ba6-4c7a-b78f-95be6754bddc",
    "metadata": {},
    "source": [
-    "###### precision（感度（再現率））"
+    "###### サポートベクターマシン分類器"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "049adb5c-da8b-466d-91f2-9a547c672602",
+   "id": "ae580784-3372-45bc-901c-683361843664",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"precision_score: \", metrics.precision_score(y2_test, svc2.predict(x2_test)))"
+    "print_metrics(y2_test, svc2.predict(x2_test))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db62fe79-393d-4723-b8f2-9c528089455b",
+   "id": "54653e56-a0e3-4de3-9086-734f15c0dabb",
    "metadata": {},
    "source": [
-    "###### recall（精度（適合率））"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f984d347-f59e-4f33-83b6-407997c11610",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"recall_score: \", metrics.recall_score(y2_test, svc2.predict(x2_test)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b78805e3-7262-4819-b6f0-8bebb30d0f94",
-   "metadata": {},
-   "source": [
-    "###### f1-score（F値）"
+    "###### 勾配ブースティング木"
    ]
   },
   {
@@ -505,7 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"f1_score: \", metrics.f1_score(y2_test, svc2.predict(x2_test)))"
+    "print_metrics(y2_test, tree_gbc2.predict(x2_test))"
    ]
   },
   {
@@ -540,8 +659,7 @@
    "outputs": [],
    "source": [
     "cm_ppn3 = confusion_matrix(y3_test, ppn3.predict(x3_test))\n",
-    "print(cm_ppn3.dtype)\n",
-    "print(cm_ppn3)"
+    "plot_cm(cm_ppn3, np.unique(y3_test))"
    ]
   },
   {
@@ -560,8 +678,7 @@
    "outputs": [],
    "source": [
     "cm_svc3 = confusion_matrix(y3_test, svc3.predict(x3_test))\n",
-    "print(cm_svc3.dtype)\n",
-    "print(cm_svc3)"
+    "plot_cm(cm_svc3, np.unique(y3_test))"
    ]
   },
   {
@@ -580,8 +697,7 @@
    "outputs": [],
    "source": [
     "cm_tree3 = confusion_matrix(y3_test, tree_gbc3.predict(x3_test))\n",
-    "print(cm_tree3.dtype)\n",
-    "print(cm_tree3)"
+    "plot_cm(cm_tree3, np.unique(y3_test))"
    ]
   },
   {
@@ -589,57 +705,63 @@
    "id": "d846ca13-4b8d-49b5-a719-7965a79862d5",
    "metadata": {},
    "source": [
-    "##### ミクロ平均・マクロ平均"
+    "##### 混同行列による指標\n",
+    "\n",
+    "※ [データマイニング（DM）- CRISP-DM > 詳細 > 評価 > 精度の評価](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a4cae23-543a-4ced-a8f9-49a3a3213e54",
+   "id": "b1186bec-9187-48b9-ac79-132bca16a4ef",
    "metadata": {},
    "source": [
-    "###### ミクロ平均\n",
-    "- クラスごとのサンプル数の偏りを調整しない場合の平均の取り方\n",
-    "- 多数派のクラスを重視したいときはミクロ平均を使う。"
+    "###### 単純パーセプトロン線形分類器"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8d48661-a4df-498d-b18d-74ded8ad2f62",
+   "id": "2f1f78e8-40e8-49a0-9088-8edb0d53a25f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 適合率のミクロ平均\n",
-    "print(\"precision_score: \", metrics.precision_score(y3_test, svc3.predict(x3_test), average='micro'))\n",
-    "# 再現率のミクロ平均\n",
-    "print(\"recall_score: \", metrics.recall_score(y3_test, svc3.predict(x3_test), average='micro'))\n",
-    "# F値のミクロ平均\n",
-    "print(\"f1_score: \", metrics.f1_score(y3_test, svc3.predict(x3_test), average='micro'))"
+    "print_metrics(y3_test, ppn3.predict(x3_test))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5ce79098-5d67-4919-9788-baac775683fb",
+   "id": "2932c41e-18bd-4f58-ae35-d10a26adbabf",
    "metadata": {},
    "source": [
-    "###### マクロ平均\n",
-    "- サンプル数の偏りを調整する場合の平均の取り方\n",
-    "- 全体を均等に評価したいときはマクロ平均を使う。"
+    "###### サポートベクターマシン分類器"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "322a1188-d75d-4fc8-a8f2-62441ec1d2f7",
+   "id": "01d0f35d-32f9-4704-a0f6-4939072956c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 適合率のマクロ平均\n",
-    "print(\"precision_score: \", metrics.precision_score(y3_test, svc3.predict(x3_test), average='macro'))\n",
-    "# 再現率のマクロ平均\n",
-    "print(\"recall_score: \", metrics.recall_score(y3_test, svc3.predict(x3_test), average='macro'))\n",
-    "# F値のマクロ平均\n",
-    "print(\"f1_score: \", metrics.f1_score(y3_test, svc3.predict(x3_test), average='macro'))"
+    "print_metrics(y3_test, svc3.predict(x3_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42884ff5-4c2d-4030-8147-f773645e4d4e",
+   "metadata": {},
+   "source": [
+    "###### 勾配ブースティング木"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdbda6a4-1d92-452c-afff-7c648837cf9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_metrics(y3_test, tree_gbc3.predict(x3_test))"
    ]
   },
   {
@@ -1114,7 +1236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gs_svc.fit(X_xor_train, y_xor_train)"
+    "gs_svc.fit(x_xor_train, y_xor_train)"
    ]
   },
   {
@@ -1171,23 +1293,47 @@
    "id": "5a220f25-9ed2-4bd5-878e-1dad1245a0d6",
    "metadata": {},
    "source": [
-    "### 特徴量エンジニアリング"
+    "### 特徴量の選択とエンジニアリング"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7afc31b9-590d-4d35-a9b3-6e0df8da6c8d",
+   "metadata": {},
+   "source": [
+    "#### 特徴量の選択\n",
+    "- [散布図行列で特徴量を選択](ScikitLearnTraining0.ipynb)\n",
+    "- アルゴリズムで評価\n",
+    "  - 回帰：[重回帰でデータの標準化を施してあれば、偏回帰係数を参考にできる](ScikitLearnTraining1.ipynb)\n",
+    "  - 分類：[RandomForestClassifierの機能で各特徴量の重要度を出力できる](ScikitLearnTraining3.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "0e8fa99f-c01d-4827-84c1-8dfedf6deb4c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### 特徴量エンジニアリング"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a252050-3519-45e7-aa99-c87fba4dd109",
    "metadata": {},
    "source": [
-    "#### 既出の[主成分分析後](ScikitLearnTraining4.ipynb)の[分類](ScikitLearnTraining3.ipynb)など"
+    "##### [主成分分析後の分類など](ScikitLearnTraining3.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "9ebb6733-18be-4dac-8caf-df3b06d3c724",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "#### ..."
+    "##### [高度な特徴量エンジニアリング（Kaggleコンペ）](ScikitLearnTraining6.ipynb)"
    ]
   }
  ],
@@ -1207,7 +1353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
