--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -194,6 +194,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c5c6788-81ba-4d85-9c57-41b0224ac008",
+   "metadata": {},
+   "source": [
+    "#### Kaggleチュートリアル 編\n",
+    "- [タイタニック生存者予測](ScikitLearnTraining6.ipynb)\n",
+    "- [住宅価格予測](ScikitLearnTraining7.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7883333d-e53d-47eb-b83c-4afb3c8ea3b4",
    "metadata": {
     "tags": []
@@ -318,7 +328,12 @@
    "id": "039bdbee-4651-483c-bf30-9a0ea0cbfcdd",
    "metadata": {},
    "source": [
-    "#### [CNN](TensorFlowAndKeras3.ipynb)"
+    "#### CNN\n",
+    "- [初歩的なCNN](TensorFlowAndKeras3.ipynb)\n",
+    "- [ちょっと高度なCNN](TensorFlowAndKeras4.ipynb)\n",
+    "- [画像の前処理](TensorFlowAndKeras5.ipynb)\n",
+    "- [前処理加え２値分類を手製CNNで](TensorFlowAndKeras6.ipynb)\n",
+    "- [初歩編＋転移学習・ファインチューニング](TensorFlowAndKeras7.ipynb)"
    ]
   },
   {
@@ -354,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
