--- a/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
@@ -8,10 +8,16 @@
     "# scikit-learnのトレーニング♨\n",
     "\n",
     "## 環境準備、共通的データ処理 編\n",
-    "- [環境準備](#環境準備)\n",
-    "- [共通的データ処理](#共通的データ処理)\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
+    "- [環境準備](#環境準備)\n",
+    "  - [インストール](#インストール)\n",
+    "  - [インポート](#インポート)\n",
+    "- [共通的データ処理](#共通的データ処理)\n",
+    "  - [生成](#生成)\n",
+    "  - [加工](#加工)\n",
+    "  - [理解](#理解)\n",
+    "  - [準備](#準備)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -49,8 +55,7 @@
     "!pip install scikit-learn # scikit-learn\n",
     "!pip install openpyxl # Excel読込用\n",
     "!pip install seaborn # 散布図表示用\n",
-    "!pip install mlxtend # 分類可視化用\n",
-    "!pip install mglearn # 教材的ライブラリ"
+    "!pip install mlxtend # 分類可視化用"
    ]
   },
   {
@@ -83,7 +88,6 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import mglearn\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -265,7 +269,9 @@
   {
    "cell_type": "markdown",
    "id": "c7bae03e-2e5d-4107-b3e8-3fba071c22bb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 生成"
    ]
@@ -524,7 +530,9 @@
   {
    "cell_type": "markdown",
    "id": "7183627f-751a-4064-bd33-c4da723c2713",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 加工\n",
     "切出や結合など。"
@@ -683,11 +691,7 @@
    "id": "21c919bc-bf59-4b15-9144-eb47d96ceb48",
    "metadata": {},
    "source": [
-    "###### 散布図行列を表示\n",
-    "特徴量エンジニアリング\n",
-    "- 目的変数と相関関係の大きい説明変数を選択するなど。\n",
-    "- ここでの目的関数は分類なので散布図で相関は確認し難い。\n",
-    "- 相関関係が大きい説明変数同士は削除するなど。"
+    "###### 散布図行列を表示"
    ]
   },
   {
@@ -706,8 +710,7 @@
    "id": "2709315c-fe15-4c6a-81e1-12bcebb094d4",
    "metadata": {},
    "source": [
-    "###### カテゴリ分類した散布図行列を表示\n",
-    "分類やクラススタリングし易い説明変数を選択するなど。"
+    "###### カテゴリ分類した散布図行列を表示"
    ]
   },
   {
@@ -719,6 +722,17 @@
    "source": [
     "sns.pairplot(df2, hue='quality')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fd4ca4d-3398-4ff4-bd0f-ff76440c0f39",
+   "metadata": {},
+   "source": [
+    "###### 散布図行列で特徴量を選択\n",
+    "- 回帰の場合、目的変数と相関関係が高い説明変数を選択する。\n",
+    "- 分類の場合、目的変数を空間上で分離できそうな説明変数を選択する。\n",
+    "- 相関関係が高い説明変数同士は問題を起こす可能性（マルチコ）。"
    ]
   },
   {
@@ -792,7 +806,7 @@
     "tags": []
    },
    "source": [
-    "##### 説明変数と目的変数の切出"
+    "##### 説明変数・目的変数の選択・分割"
    ]
   },
   {
@@ -980,7 +994,6 @@
    "cell_type": "markdown",
    "id": "191485d0-f80a-4fe1-9974-49e77e738a36",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1012,7 +1025,9 @@
   {
    "cell_type": "markdown",
    "id": "26083dff-b2d3-4999-b6ca-963409b4b331",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "###### [交差検証法](ScikitLearnTraining5.ipynb)"
    ]
@@ -1034,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
