--- a/Notebook/Jupyter/path/ScikitLearnTraining2.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining2.ipynb
@@ -8,10 +8,14 @@
     "# scikit-learnのトレーニング♨\n",
     "\n",
     "## 多項式回帰、正則化回帰分析 編\n",
-    "- [多項式回帰分析](#多項式回帰分析)\n",
-    "- [正則化回帰分析](#正則化回帰分析)\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
+    "- [環境準備](#環境準備)\n",
+    "  - [インポート](#インポート)\n",
+    "  - [共通関数定義](#共通関数定義)\n",
+    "- [モデル・アルゴリズム](#モデル・アルゴリズム)\n",
+    "  - [多項式回帰分析](#多項式回帰分析)\n",
+    "  - [正則化回帰分析](#正則化回帰分析)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -28,6 +32,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f0de912-0158-4103-a266-b9fb4efa9e81",
+   "metadata": {},
+   "source": [
+    "### インポート"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "06435506-b010-44b9-8fc6-472e61ed518c",
@@ -39,7 +51,6 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import mglearn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn import datasets                                 # サンプル・データセット\n",
@@ -90,6 +101,47 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a364c318-dcde-4727-9fda-3354f08893f0",
+   "metadata": {},
+   "source": [
+    "### 共通関数定義"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6825925-6cdd-43be-8aa1-2ebfb1b03f89",
+   "metadata": {},
+   "source": [
+    "#### 残差プロットを行う関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f18533b4-a934-4551-9697-edc45e1b6205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def res_plot(y_train, y_train_pred, y_test, y_test_pred):\n",
+    "    # train, testごとに残差を算出\n",
+    "    res_train = y_train_pred - y_train\n",
+    "    res_test  = y_test_pred - y_test\n",
+    "    \n",
+    "    # train, testごとに(予測値, 残差)をプロット\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    plt.scatter(y_train_pred, res_train, color='blue', marker='o', label='train', alpha=0.5)\n",
+    "    plt.scatter(y_test_pred, res_test, color='green', marker='s', label='test', alpha=0.5)\n",
+    "    \n",
+    "    plt.xlabel('Predicted Values')                  # x軸のラベルを表示\n",
+    "    plt.ylabel('Residuals')                         # y軸のラベルを表示\n",
+    "    plt.legend(loc='upper left')                    # 凡例を左上に表示\n",
+    "    plt.hlines(y=0, xmin=-10, xmax=50, color='red') # 残差0の線を表示\n",
+    "    plt.xlim([-10, 50])                             # 表示する横軸の範囲を指定\n",
+    "    plt.show()"
    ]
   },
   {
@@ -153,22 +205,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bebf04b-f954-4a08-b35f-6daeb5673275",
-   "metadata": {},
-   "source": [
-    "###### [共通](#共通的)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "82fa84a8-e470-454e-a811-1b68bc7aa473",
-   "metadata": {},
-   "source": [
-    "###### 個別"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "75721690-e4a1-48ce-992b-673fabc9ad50",
    "metadata": {},
    "source": [
@@ -192,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# データを切出して、型を変換（DF → NP）\n",
+    "# 説明変数・目的変数の選択・分割\n",
     "x_org = np.array(df.drop(['medv'], axis=1))\n",
     "# x = np.array(df.drop(['indus', 'dis', 'medv'], axis=1))\n",
     "y_org = np.array(df.loc[:, ['medv']])\n",
@@ -408,36 +444,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc881888-c463-415f-bb2d-3fcb2d95ba38",
+   "id": "105bb1fa-99a7-4134-86f8-092e0b87380d",
    "metadata": {},
    "source": [
-    "###### 残差プロットを行う。\n",
-    "説明変数が３変数以上なので。"
+    "###### [スコアを表示](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972)\n",
+    "- 平均二乗誤差（MSE：Mean Squared Error）\n",
+    "- 誤差の標準偏差（RMSE : Root Mean Squared Error）"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4c66510-6e2f-4f72-a9dd-7da3c3aa2518",
+   "id": "54e3c931-48b1-4194-bdf4-2e83c72d8bca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def res_plot(y_train, y_train_pred, y_test, y_test_pred):\n",
-    "    # train, testごとに残差を算出\n",
-    "    res_train = y_train_pred - y_train\n",
-    "    res_test  = y_test_pred - y_test\n",
-    "    \n",
-    "    # train, testごとに(予測値, 残差)をプロット\n",
-    "    plt.figure(figsize=(8, 8))\n",
-    "    plt.scatter(y_train_pred, res_train, color='blue', marker='o', label='train', alpha=0.5)\n",
-    "    plt.scatter(y_test_pred, res_test, color='green', marker='s', label='test', alpha=0.5)\n",
-    "    \n",
-    "    plt.xlabel('Predicted Values')                  # x軸のラベルを表示\n",
-    "    plt.ylabel('Residuals')                         # y軸のラベルを表示\n",
-    "    plt.legend(loc='upper left')                    # 凡例を左上に表示\n",
-    "    plt.hlines(y=0, xmin=-10, xmax=50, color='red') # 残差0の線を表示\n",
-    "    plt.xlim([-10, 50])                             # 表示する横軸の範囲を指定\n",
-    "    plt.show()"
+    "lin_train_mse = mse(y_train, model_lin.predict(x_train_lin))\n",
+    "lin_test_mse = mse(y_test, model_lin.predict(x_test_lin))\n",
+    "\n",
+    "print('<lin>')\n",
+    "print('lin_train_mse: %.3f' % lin_train_mse)\n",
+    "print('lin_test_mse: %.3f' % lin_test_mse)\n",
+    "print('lin_train_rmse: %.3f' % (lin_train_mse ** (1/2)))\n",
+    "print('lin_test_rmse : %.3f' % (lin_test_mse ** (1/2)))\n",
+    "\n",
+    "quad_train_mse = mse(y_train, model_quad.predict(x_train_quad))\n",
+    "quad_test_mse = mse(y_test, model_quad.predict(x_test_quad))\n",
+    "\n",
+    "print('<quad>')\n",
+    "print('quad_train_mse: %.3f' % lin_train_mse)\n",
+    "print('quad_test_mse: %.3f' % lin_test_mse)\n",
+    "print('quad_train_rmse: %.3f' % (lin_train_mse ** (1/2)))\n",
+    "print('quad_test_rmse : %.3f' % (lin_test_mse ** (1/2)))\n",
+    "\n",
+    "cubic_train_mse = mse(y_train, model_cubic.predict(x_train_cubic))\n",
+    "cubic_test_mse = mse(y_test, model_cubic.predict(x_test_cubic))\n",
+    "\n",
+    "print('<cubic>')\n",
+    "print('cubic_train_mse: %.3f' % cubic_train_mse)\n",
+    "print('cubic_test_mse: %.3f' % cubic_test_mse)\n",
+    "print('cubic_train_rmse: %.3f' % (cubic_train_mse ** (1/2)))\n",
+    "print('cubic_test_rmse : %.3f' % (cubic_test_mse ** (1/2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc881888-c463-415f-bb2d-3fcb2d95ba38",
+   "metadata": {},
+   "source": [
+    "###### 残差プロットを行う。\n",
+    "- 説明変数が３変数以上でも適用できる。\n",
+    "- 参考：https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#i3d85f2b"
    ]
   },
   {
@@ -643,7 +700,7 @@
    "id": "d02abab0-5743-4f81-a7c5-6f43c0e0adba",
    "metadata": {},
    "source": [
-    "###### プロット・データはテスト・データ"
+    "###### 多項式基底関数で変数変換を実行"
    ]
   },
   {
@@ -748,10 +805,10 @@
     "x_test_septic = septic.fit_transform(x_test)\n",
     "\n",
     "# 推論\n",
-    "y_predict_septic = model_septic.predict(x_test_septic)\n",
-    "y_predict_ridge = model_ridge.predict(x_test_septic)\n",
-    "y_predict_lasso = model_lasso.predict(x_test_septic)\n",
-    "y_predict_en = model_en.predict(x_test_septic)"
+    "y_test_predict_septic = model_septic.predict(x_test_septic)\n",
+    "y_test_predict_ridge = model_ridge.predict(x_test_septic)\n",
+    "y_test_predict_lasso = model_lasso.predict(x_test_septic)\n",
+    "y_test_predict_en = model_en.predict(x_test_septic)"
    ]
   },
   {
@@ -784,10 +841,10 @@
     "plt.scatter(x_train, y_train)\n",
     "\n",
     "# ★7次関数で近似て過学習になった推論を描画\n",
-    "plt.plot(x_plot, y_predict_septic, color='green')\n",
-    "plt.plot(x_plot, y_predict_ridge, color='blue')\n",
-    "plt.plot(x_plot, y_predict_lasso, color='red')\n",
-    "plt.plot(x_plot, y_predict_en, color='yellow')\n",
+    "plt.plot(x_plot, y_test_predict_septic, color='green')\n",
+    "plt.plot(x_plot, y_test_predict_ridge, color='blue')\n",
+    "plt.plot(x_plot, y_test_predict_lasso, color='red')\n",
+    "plt.plot(x_plot, y_test_predict_en, color='yellow')\n",
     "\n",
     "# 縦の表示範囲を指定\n",
     "plt.ylim([-1.5, 1.5])\n",
@@ -953,7 +1010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
