--- a/Notebook/Jupyter/path/TensorFlowAndKeras0.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras0.ipynb
@@ -5,19 +5,21 @@
    "id": "4fe59fb7-e68d-4e4b-8901-5902d5343ed8",
    "metadata": {},
    "source": [
-    "# scikit-learnのトレーニング♨\n",
+    "# TensorFlow・Kerasのトレーニング♨\n",
     "\n",
     "## 環境準備、共通的データ処理 編\n",
+    "\n",
+    "## [目次](TableOfContents.ipynb)\n",
     "- [環境準備](#環境準備)\n",
     "  - [インストール](#インストール)\n",
     "  - [インポート](#インポート)\n",
     "- [共通処理](#共通処理)\n",
     "  - [モデルの生成](#モデルの生成)\n",
     "  - [勾配降下法アルゴリズムの選択](#勾配降下法アルゴリズムの選択)\n",
-    "  - [過学習の抑止](#過学習の抑止)\n",
+    "  - [モデルの定義とコンパイル](#モデルの定義とコンパイル)\n",
+    "  - [モデルの学習と推論](#モデルの学習と推論モデルの保存と復元)\n",
     "  - [モデルの保存と復元](#モデルの保存と復元)\n",
-    "\n",
-    "## [目次](TableOfContents.ipynb)\n",
+    "  - [過学習の抑止](#過学習の抑止)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -82,10 +84,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "900c16f8-ebce-429b-ad95-fea0698284df",
+   "metadata": {},
+   "source": [
+    "#### tensorflow keras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e43ccfbd-77e5-49c2-b69a-0c2a55c6ee54",
+   "metadata": {},
+   "source": [
+    "##### アンイストール\n",
+    "バージョン不一致の問題が起きたら一度アンイストールする。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2aaef8b-6d1b-4942-a4d5-8a9f58d17b67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!echo Y | pip uninstall keras\n",
+    "#!echo Y | pip uninstall tensorflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e831a07-7412-4735-b9de-d4423581af3a",
    "metadata": {},
    "source": [
-    "#### tensorflow"
+    "##### tensorflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f29a9b33-7bd7-4d16-8782-1ab052f8d85b",
+   "metadata": {},
+   "source": [
+    "###### CPU"
    ]
   },
   {
@@ -95,7 +133,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U tensorflow"
+    "!pip install tensorflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20e67e8e-837a-4cde-a6e1-d317673037ec",
+   "metadata": {},
+   "source": [
+    "###### GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d1a3439-5764-4a8d-8534-9d19217b6de7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install tensorflow-gpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be91cda8-94c9-43ec-9c7c-0064272d63eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.client import device_lib\n",
+    "device_lib.list_local_devices()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1b5682-0b6a-4651-be29-abc2d8548e4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "#tf.test.is_gpu_available()\n",
+    "tf.config.list_physical_devices('GPU')"
    ]
   },
   {
@@ -103,7 +182,7 @@
    "id": "e874e274-64b3-4a87-9b07-6a381fa9bec4",
    "metadata": {},
    "source": [
-    "#### keras"
+    "##### keras"
    ]
   },
   {
@@ -113,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U keras"
+    "!pip install keras"
    ]
   },
   {
@@ -162,7 +241,8 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -180,9 +260,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn import datasets\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import confusion_matrix as cm\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -224,15 +306,17 @@
     "print(keras.__version__)\n",
     "\n",
     "# モデル定義\n",
-    "from keras.models import Model, Sequential, model_from_json\n",
+    "from keras.models import Model, Sequential, model_from_json, load_model\n",
     "from keras.layers import Dense, Input, Activation, Flatten, Dropout, LSTM\n",
     "from keras.layers.convolutional import Conv2D\n",
     "from keras.layers.pooling import MaxPool2D\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from keras import optimizers\n",
     "from keras.optimizers import SGD, Adam\n",
+    "\n",
     "# その他\n",
     "from keras.applications.vgg16 import VGG16\n",
+    "from keras.utils import to_categorical\n",
     "from keras.utils import np_utils"
    ]
   },
@@ -437,9 +521,20 @@
   {
    "cell_type": "markdown",
    "id": "8643fa0b-3dbf-465b-a765-321f0c506233",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### モデルの定義とコンパイル\n",
+    "以下は、DNNによる回帰"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c2c2386-f251-4b60-9bc6-4ad6514648fb",
    "metadata": {},
    "source": [
-    "### モデルの生成"
+    "#### モデルの定義"
    ]
   },
   {
@@ -449,7 +544,350 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ..."
+    "num = 13 # x_train.shape[1] # 入力ベクトルの要素数\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Dense(64, activation=tf.nn.relu,\n",
+    "                       input_shape=(num,)),\n",
+    "    keras.layers.Dense(64, activation=tf.nn.relu),\n",
+    "    keras.layers.Dense(1)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a152f065-2ea2-4ac7-a424-5a1bf4efaa1d",
+   "metadata": {},
+   "source": [
+    "#### モデルのコンパイル"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fecd7a4-48f7-4e25-bc17-56b4e47b15cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='mse', optimizer=Adam(), metrics=['mae'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94d635c3-44b1-47d7-9077-12a895cebb85",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### モデルの学習と推論"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71d7c1a0-19ae-466f-ae70-99bd24ebc6fb",
+   "metadata": {},
+   "source": [
+    "#### データ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae63b241-a19b-4b8d-9c11-6051233b94a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proxies = { # プロキシ設定\n",
+    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
+    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
+    "}\n",
+    "\n",
+    "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=Boston.csv&refer=FrontPage'\n",
+    "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
+    "df = pd.read_csv(io.BytesIO(res.content), encoding='utf-8', sep=\",\")\n",
+    "\n",
+    "df=df.drop('Unnamed: 0',axis=1)\n",
+    "\n",
+    "x_org = np.array(df.drop(['medv'], axis=1))\n",
+    "y_org = np.array(df.loc[:, ['medv']])\n",
+    "\n",
+    "mean = x_org.mean(axis=0)\n",
+    "std = x_org.std(axis=0)\n",
+    "x = (x_org - mean) / std\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y_org, test_size = 0.3, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19bd839f-4aea-44b3-bb5e-8b5966082128",
+   "metadata": {},
+   "source": [
+    "#### 学習"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb4ff44-9499-4b0d-baec-bfc87e352149",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 20\n",
+    "n_epoch = 200\n",
+    "hist = model.fit(x_train, y_train,\n",
+    "                 batch_size=batch_size,\n",
+    "                 epochs=n_epoch,\n",
+    "                 validation_data=(x_test, y_test),\n",
+    "                 verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f233aa0-55f7-4e4b-828f-b0e2196c9c7b",
+   "metadata": {},
+   "source": [
+    "#### 推論"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7467413a-a79d-4c75-b49e-fe203a47ae75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e060302a-6e01-4753-89e0-db8c9935aee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(y_org, color='blue') # 実測値\n",
+    "plt.plot(y_pred, color='red') # 予測値\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e32cef8-ca5d-4b53-a839-3ca28e3435a3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### モデルの保存と復元"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34ef7494-3972-4d2d-af2e-3d44459ce79b",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### モデルの保存"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "364deeef-f0ac-472e-8965-bcd43de4b4dd",
+   "metadata": {},
+   "source": [
+    "##### 古い形式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bf30118-d6d2-452c-a6a7-d1e1954d9d09",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "# モデルはjson形式\n",
+    "json_string = model.to_json()\n",
+    "with open('dnn.model', 'w') as f:\n",
+    "    f.write(json_string)\n",
+    "# パラメータはhdf5形式\n",
+    "model.save_weights('param.hdf5')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "558f9e42-2b83-4959-adda-123e54caae0b",
+   "metadata": {},
+   "source": [
+    "##### 新しい形式\n",
+    "ググる重みとモデル(json or yaml)を別々に保存する例がよく出てくるがmodel.save()とload_model()でイケる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29bfba70-6227-435c-8869-06a7f48ef38c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('../work/dnn.h5', include_optimizer=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ce0d5ac-5afb-4179-b368-b1f174ecb98b",
+   "metadata": {},
+   "source": [
+    "#### モデルの復元"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f829c9cd-bf32-4cc3-99a0-6bde077298fe",
+   "metadata": {},
+   "source": [
+    "##### 古い形式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a18a7772-c211-4f2a-a5e1-21fcb31f3d15",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "# モデルはjson形式\n",
+    "with open('dnn.model', 'r') as f:\n",
+    "    json_string = f.read()\n",
+    "model = model_from_json(json_string)\n",
+    "\n",
+    "# パラメータはhdf5形式\n",
+    "model.load_weights('param.hdf5')\n",
+    "\n",
+    "# 復元後、リコンパイルが必要になる。\n",
+    "model.compile(loss='mse', optimizer=Adam(), metrics=['mae'])\n",
+    "model.summary()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76fe70ae-3ff7-4f9a-9406-f73c8cd015ef",
+   "metadata": {},
+   "source": [
+    "##### 新しい形式\n",
+    "ググる重みとモデル(json or yaml)を別々に保存する例がよく出てくるがmodel.save()とload_model()でイケる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17414dc7-4354-4ba6-be13-7204c25a0e43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model('../work/dnn.h5', compile=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dc026a7-bc26-460f-8143-58ad4891b0da",
+   "metadata": {},
+   "source": [
+    "###### 評価"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebb0ca4b-5c79-412a-ad7d-2e1dec1f99e7",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### モデルの評価"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "957c6360-b4f0-411a-ae79-aeda0c2337e1",
+   "metadata": {},
+   "source": [
+    "#### 学習履歴を表示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b5239dd-3e47-4f6b-b043-ed2e346dcdde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loss\n",
+    "def plot_history_loss(hist):\n",
+    "    plt.plot(hist.history['loss'],label=\"loss for training\")\n",
+    "    plt.plot(hist.history['val_loss'],label=\"loss for validation\")\n",
+    "    plt.title('model loss')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('loss')\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.show()\n",
+    "    \n",
+    "#hist = model.fit(x_train, ...\n",
+    "#plot_history_loss(hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23b4b2dc-d07d-4c40-9c13-2f39275829d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mae\n",
+    "def plot_history_mae(hist):\n",
+    "    plt.plot(hist.history['mae'],label=\"mae for training\")\n",
+    "    plt.plot(hist.history['val_mae'],label=\"mae for validation\")\n",
+    "    plt.title('model mae')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('mae')\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.show()\n",
+    "    \n",
+    "#hist = model.fit(x_train, ...\n",
+    "#plot_history_mae(hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c24d1255-2d51-4c9c-b011-d8920861c18c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# accuracy\n",
+    "def plot_history_acc(hist):\n",
+    "    plt.plot(hist.history['accuracy'],label=\"accuracy for training\")\n",
+    "    plt.plot(hist.history['val_accuracy'],label=\"accuracy for validation\")\n",
+    "    plt.title('model accuracy')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('accuracy')\n",
+    "    plt.legend(loc='upper right')\n",
+    "    plt.show()\n",
+    "    \n",
+    "#hist = model.fit(x_train, ...\n",
+    "#plot_history_acc(hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5f62b06-6482-482c-ac03-a6696fa43fcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_history_loss(hist)\n",
+    "plot_history_mae(hist)\n",
+    "#plot_history_acc(hist)"
    ]
   },
   {
@@ -537,7 +975,7 @@
    },
    "source": [
     "#### ドロップアウト（Dropout）\n",
-    "最終層の一つ前に以下を追加。"
+    "最終層の前に以下を追加。"
    ]
   },
   {
@@ -570,101 +1008,6 @@
    "outputs": [],
    "source": [
     "#model.add(BatchNormalization())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebb0ca4b-5c79-412a-ad7d-2e1dec1f99e7",
-   "metadata": {},
-   "source": [
-    "#### モデルの評価"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "957c6360-b4f0-411a-ae79-aeda0c2337e1",
-   "metadata": {},
-   "source": [
-    "###### 学習履歴を表示"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "1b5239dd-3e47-4f6b-b043-ed2e346dcdde",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_history_loss(hist):\n",
-    "    plt.plot(hist.history['loss'],label=\"loss for training\")\n",
-    "    plt.plot(hist.history['val_loss'],label=\"loss for validation\")\n",
-    "    plt.title('model loss')\n",
-    "    plt.xlabel('epoch')\n",
-    "    plt.ylabel('loss')\n",
-    "    plt.legend(loc='best')\n",
-    "    plt.show()\n",
-    "    \n",
-    "#hist = model.fit(x_train, ...\n",
-    "#plot_history_loss(hist)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1e2d5711-6a29-472b-ae86-7fba976a3881",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### モデルの保存と復元"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34ef7494-3972-4d2d-af2e-3d44459ce79b",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### モデルの保存"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53660981-5292-4959-94a7-f352f1e8e273",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# モデルはjson形式\n",
-    "json_string = model.to_json()\n",
-    "with open('mnist.model', 'w') as f:\n",
-    "    f.write(json_string)\n",
-    "# パラメータはhdf5形式\n",
-    "model.save_weights('param.hdf5')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2ce0d5ac-5afb-4179-b368-b1f174ecb98b",
-   "metadata": {},
-   "source": [
-    "#### モデルの復元\n",
-    "復元後、再度コンパイルが必要になる。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70ef637f-9493-40e6-b262-100cd9845ac1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# モデルはjson形式\n",
-    "with open('mnist.model', 'r') as f:\n",
-    "    json_string = f.read()\n",
-    "model = model_from_json(json_string)\n",
-    "# パラメータはhdf5形式\n",
-    "model.load_weights('param.hdf5')"
    ]
   }
  ],
