--- a/Notebook/Jupyter/path/TensorFlowAndKeras2.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras2.ipynb
@@ -5,15 +5,17 @@
    "id": "4fe59fb7-e68d-4e4b-8901-5902d5343ed8",
    "metadata": {},
    "source": [
-    "# scikit-learnのトレーニング♨\n",
+    "# TensorFlow・Kerasのトレーニング♨\n",
     "\n",
     "## RNN 編\n",
+    "\n",
+    "## [目次](TableOfContents.ipynb)\n",
     "- [環境準備](#環境準備)\n",
+    "  - [インポート](#インポート)\n",
+    "  - [共通関数](#共通関数)\n",
     "- [RNNアルゴリズム・モデル](#RNNアルゴリズム・モデル)\n",
     "  - [時系列予測](#時系列予測)\n",
     "  - [...](#...)\n",
-    "\n",
-    "## [目次](TableOfContents.ipynb)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -26,7 +28,15 @@
    "id": "d48958bb-e085-40a2-a6e1-f00c80080d20",
    "metadata": {},
    "source": [
-    "## 環境準備"
+    "## [環境準備](TensorFlowAndKeras0.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a0e0b72-fc3c-46b2-ab48-4949de33fb42",
+   "metadata": {},
+   "source": [
+    "### インポート"
    ]
   },
   {
@@ -42,10 +52,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
+    "from sklearn import datasets\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import confusion_matrix as cm\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import BatchNormalization\n",
@@ -54,7 +67,7 @@
     "import keras\n",
     "print(keras.__version__)\n",
     "# モデル定義\n",
-    "from keras.models import Model, Sequential, model_from_json\n",
+    "from keras.models import Model, Sequential, model_from_json, load_model\n",
     "from keras.layers import Dense, Input, Activation, Flatten, Dropout, LSTM\n",
     "from keras.layers.convolutional import Conv2D\n",
     "from keras.layers.pooling import MaxPool2D\n",
@@ -63,11 +76,78 @@
     "from keras.optimizers import SGD, Adam\n",
     "# その他\n",
     "from keras.applications.vgg16 import VGG16\n",
+    "from keras.utils import to_categorical\n",
     "from keras.utils import np_utils\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14f143ef-8cb2-4002-aa8f-b21b9b65afc8",
+   "metadata": {},
+   "source": [
+    "### 共通関数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aba55af-999e-478e-9bac-34d117db984b",
+   "metadata": {},
+   "source": [
+    "#### 学習履歴表示関数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e29f2908-5caa-43ec-a688-7112f04976da",
+   "metadata": {},
+   "source": [
+    "##### 損失"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "654f8a80-c015-4d10-83dc-3602597cec2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_history_loss(hist):\n",
+    "    plt.plot(hist.history['loss'],label=\"loss for training\")\n",
+    "    plt.plot(hist.history['val_loss'],label=\"loss for validation\")\n",
+    "    plt.title('model loss')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('loss')\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1777c07-ab38-4a3a-bea3-a23424cae0ca",
+   "metadata": {},
+   "source": [
+    "###### 平均絶対値誤差"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6185a678-f310-4696-99ed-155dba3ae812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_history_mae(hist):\n",
+    "    plt.plot(hist.history['mae'],label=\"mae for training\")\n",
+    "    plt.plot(hist.history['val_mae'],label=\"mae for validation\")\n",
+    "    plt.title('model mae')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('mae')\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -425,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss='mean_squared_error', optimizer=Adam())"
+    "model.compile(loss='mean_squared_error', optimizer=Adam(), metrics=['mae'])"
    ]
   },
   {
@@ -471,8 +551,7 @@
    "source": [
     "batch_size = 20\n",
     "n_epoch = 200\n",
-    "hist = model.fit(x_train,\n",
-    "                 y_train,\n",
+    "hist = model.fit(x_train, y_train,\n",
     "                 epochs=n_epoch,\n",
     "                 validation_data=(x_test, y_test),\n",
     "                 verbose=0,\n",
@@ -588,6 +667,16 @@
    "outputs": [],
    "source": [
     "plot_history_loss(hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "370e36b8-417b-4708-8582-b80f748dddd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_history_mae(hist)"
    ]
   },
   {
